--- a/CountOnMe/View/Base.lproj/Main.storyboard
+++ b/CountOnMe/View/Base.lproj/Main.storyboard
@@ -228,6 +228,9 @@
                                                 <state key="normal" title="/">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="tappedDivideButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="6Uv-BA-Ppp"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LJ0-IH-0mg" userLabel="Erase">
                                                 <rect key="frame" x="180" y="0.0" width="75" height="75"/>
